@@ -4,11 +4,11 @@
 #CXX     = `dolfin-config --compiler`
 
 # For demo programs in the DOLFIN source tree
-CFLAGS  = `../../config/dolfin-config --cflags_dolfin`
-LIBS    = `../../config/dolfin-config --libs_dolfin`
-CXX     = `../../config/dolfin-config --compiler`
+CFLAGS  = `../../../config/dolfin-config --cflags_dolfin`
+LIBS    = `../../../config/dolfin-config --libs_dolfin`
+CXX     = `../../../config/dolfin-config --compiler`
 
-DEST    = dolfin-fem
+DEST    = dolfin-fem-simple
 OBJECTS = main.o
 
 all: $(DEST)
